{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 117,
  "lineage": "1e354867-32c5-5221-2e35-31fd85dd1b76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dfroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:route-table/rtb-02303dbc4842c753a",
            "default_route_table_id": "rtb-02303dbc4842c753a",
            "id": "rtb-02303dbc4842c753a",
            "owner_id": "136623416065",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087228d1ab3976994",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DefaultRoute"
            },
            "tags_all": {
              "Name": "DefaultRoute"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f7166f7b77f832db",
            "domain": "vpc",
            "id": "eipalloc-09c9ff69feb64a836",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0219bd2affdb761dd",
            "private_dns": "ip-10-0-9-204.eu-west-1.compute.internal",
            "private_ip": "10.0.9.204",
            "public_dns": "ec2-34-249-129-28.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.129.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e4cca18d2b60abd5",
            "domain": "vpc",
            "id": "eipalloc-01dd142fdfd853931",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0db8882cee3937147",
            "private_dns": "ip-10-0-33-109.eu-west-1.compute.internal",
            "private_ip": "10.0.33.109",
            "public_dns": "ec2-99-80-247-165.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.247.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05be6e4068fb1d09a",
            "arn": "arn:aws:ec2:eu-west-1:136623416065:instance/i-06220e0fa651e7829",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06220e0fa651e7829",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxmachines",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-085c9249c0f4de7f3",
            "private_dns": "ip-10-0-15-72.eu-west-1.compute.internal",
            "private_ip": "10.0.15.72",
            "public_ip": "54.195.158.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0015aa83782eaa0a0",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e5c14d34663d942",
            "tags": {
              "Name": "ConfigMaster"
            },
            "tags_all": {
              "Name": "ConfigMaster"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02179164a54d6d7d2"
            ]
          },
          "dependencies": [
            "aws_security_group.tst",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05be6e4068fb1d09a",
            "arn": "arn:aws:ec2:eu-west-1:136623416065:instance/i-099523b33d6352b21",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099523b33d6352b21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxmachines",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01000438b5903c746",
            "private_dns": "ip-10-0-8-211.eu-west-1.compute.internal",
            "private_ip": "10.0.8.211",
            "public_ip": "34.244.110.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 450,
                "throughput": 0,
                "volume_id": "vol-0ad3551c4c1e53811",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e5c14d34663d942",
            "tags": {
              "Name": "ConfigSlave"
            },
            "tags_all": {
              "Name": "ConfigSlave"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02179164a54d6d7d2"
            ]
          },
          "dependencies": [
            "aws_security_group.tst",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:internet-gateway/igw-087228d1ab3976994",
            "id": "igw-087228d1ab3976994",
            "owner_id": "136623416065",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c9ff69feb64a836",
            "id": "nat-026d86b529f24d7ab",
            "network_interface_id": "eni-0219bd2affdb761dd",
            "private_ip": "10.0.9.204",
            "public_ip": "34.249.129.28",
            "subnet_id": "subnet-01e5c14d34663d942"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dd142fdfd853931",
            "id": "nat-0b469c1f22bd87dfa",
            "network_interface_id": "eni-0db8882cee3937147",
            "private_ip": "10.0.33.109",
            "public_ip": "99.80.247.165",
            "subnet_id": "subnet-000d7454872d35307"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public2",
            "aws_vpc.custom",
            "aws_eip.nat2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-094d656b41692608b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026d86b529f24d7ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094d656b41692608b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat1",
            "aws_route_table.route1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c5c0f3dc99ef8881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b469c1f22bd87dfa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c5c0f3dc99ef888",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat2",
            "aws_route_table.route2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:route-table/rtb-094d656b41692608b",
            "id": "rtb-094d656b41692608b",
            "owner_id": "136623416065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-026d86b529f24d7ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ProductionCustom1a"
            },
            "tags_all": {
              "Name": "ProductionCustom1a"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:route-table/rtb-02c5c0f3dc99ef888",
            "id": "rtb-02c5c0f3dc99ef888",
            "owner_id": "136623416065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b469c1f22bd87dfa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ProductionCustom1b"
            },
            "tags_all": {
              "Name": "ProductionCustom1b"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e292023d967f651",
            "route_table_id": "rtb-02303dbc4842c753a",
            "subnet_id": "subnet-01e5c14d34663d942"
          },
          "dependencies": [
            "aws_default_route_table.dfroute",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06745e0b23a2de7e2",
            "route_table_id": "rtb-02303dbc4842c753a",
            "subnet_id": "subnet-000d7454872d35307"
          },
          "dependencies": [
            "aws_default_route_table.dfroute",
            "aws_internet_gateway.gw",
            "aws_subnet.public2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07930d11bca623988",
            "route_table_id": "rtb-094d656b41692608b",
            "subnet_id": "subnet-0e44c20b4c2f27482"
          },
          "dependencies": [
            "aws_route_table.route1",
            "aws_subnet.private1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f50b74ee46096406",
            "route_table_id": "rtb-02c5c0f3dc99ef888",
            "subnet_id": "subnet-09997647d8a5b26b1"
          },
          "dependencies": [
            "aws_route_table.route2",
            "aws_subnet.private2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:security-group/sg-07f221e868be6f55a",
            "description": "Allow access to database servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f221e868be6f55a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL Server from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL Server from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SQL Server from VPC",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "Custom-database-sg",
            "name_prefix": "",
            "owner_id": "136623416065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Custom-database-sg"
            },
            "tags_all": {
              "Name": "Custom-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:security-group/sg-068c9997debbc9aea",
            "description": "Allow access to Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068c9997debbc9aea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Custom-alb-sg",
            "name_prefix": "",
            "owner_id": "136623416065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Custom-alb-sg"
            },
            "tags_all": {
              "Name": "Custom-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:security-group/sg-004426c4f2173bc08",
            "description": "Allow access to resources in private subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004426c4f2173bc08",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Custom-private-sg",
            "name_prefix": "",
            "owner_id": "136623416065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Custom-private-sg"
            },
            "tags_all": {
              "Name": "Custom-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:security-group/sg-011fbfec54e329aa0",
            "description": "Allow access to webservers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011fbfec54e329aa0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Custom-RGDW-sg",
            "name_prefix": "",
            "owner_id": "136623416065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Custom-RGDW-sg"
            },
            "tags_all": {
              "Name": "Custom-RGDW-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:security-group/sg-02179164a54d6d7d2",
            "description": "Allow ssh access to test resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02179164a54d6d7d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Custom-test-sg",
            "name_prefix": "",
            "owner_id": "136623416065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Custom-test-sg"
            },
            "tags_all": {
              "Name": "Custom-test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:subnet/subnet-0e44c20b4c2f27482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0e44c20b4c2f27482",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136623416065",
            "tags": {
              "Name": "Prod-Private-1a"
            },
            "tags_all": {
              "Name": "Prod-Private-1a"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:subnet/subnet-09997647d8a5b26b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-09997647d8a5b26b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136623416065",
            "tags": {
              "Name": "Prod-Private-1b"
            },
            "tags_all": {
              "Name": "Prod-Private-1b"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:subnet/subnet-01e5c14d34663d942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-01e5c14d34663d942",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136623416065",
            "tags": {
              "Name": "Prod-Public-1a"
            },
            "tags_all": {
              "Name": "Prod-Public-1a"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:subnet/subnet-000d7454872d35307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-000d7454872d35307",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136623416065",
            "tags": {
              "Name": "Prod-Public-1b"
            },
            "tags_all": {
              "Name": "Prod-Public-1b"
            },
            "vpc_id": "vpc-012793788a9e788ba"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:136623416065:vpc/vpc-012793788a9e788ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4fd32ff7ac34984",
            "default_route_table_id": "rtb-02303dbc4842c753a",
            "default_security_group_id": "sg-0dc428518a96ddae0",
            "dhcp_options_id": "dopt-c2212fa4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-012793788a9e788ba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02303dbc4842c753a",
            "owner_id": "136623416065",
            "tags": {
              "Name": "Production"
            },
            "tags_all": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}